Dark mode fixed for all browsers

--- a/isametry.css
+++ b/isametry.css
@@ -16,36 +16,54 @@ body {
   line-height: 1.4;
 }
 
-#page {
+#window {
   position: relative;
 }
 
-.content {
+.page {
     position: relative;
     z-index: 100;
     max-width: 650px; 
     margin: 0 auto; 
 }
 
-#article {
-  position: revert;
-}
-
-.header {
+#header {
   background-color: rgba(0, 255, 180, 0.3);
   max-width: 650px;
   margin: 0 auto; 
   padding: 16px 32px;
 }
 
-.text {
+#content {
     max-width: 650px; 
     margin: 0 auto; 
     padding: 16px 32px;
     color: currentColor;
+
 }
 
-.article_background {
+.background_light {
+    background-color: rgb(0, 255, 180);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -99;
+    mix-blend-mode: darken;
+}
+
+.background_dark {
+    background-color: rgba(0, 255, 180, 0.15);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -99;
+}
+
+.background_BW {
     background-color: currentColor;
     filter: invert(100%);
     position: absolute;
@@ -53,29 +71,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -50;
-}
-
-.curtain {
-    background-color: rgb(0, 255, 180);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
     z-index: -100;
-    mix-blend-mode: darken;
-}
-
-.background {
-    background-color: currentColor, rgba(0, 255, 180, 0.15);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -200;
-    filter: invert(100%);
 }
 
 .subtle {
